# fair_eva_web_client

./: .gitignore  README.md  pyproject.toml
fair_eva_web_client/: app.py  babel.cfg
fair_eva_web_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fair_eva_web_client/static/css/: bootstrap.min.css  font-awesome.min.css  theme.css
fair_eva_web_client/static/img/: README.md
fair_eva_web_client/static/js/: bootstrap.min.js  custom.js  jquery.js
fair_eva_web_client/templates/: about_us.html  base_modern.html  error.html  eval.html  index.html  not-found.html
fair_eva_web_client/translations/en/LC_MESSAGES/: messages.mo
fair_eva_web_client/translations/es/LC_MESSAGES/: messages.mo  messages.po
